fixed one of the two major problems (other than ui)

--- a/views/settings.erb
+++ b/views/settings.erb
@@ -1,6 +1,8 @@
 <h1>Set up an event</h1>
 <form action="/" method="post">
+  <p><strong>Event name</strong></p>
   <%= input 'text', 'name', 'State' %>
+  <p><strong>Event code</strong></p>
   <%= input 'text', 'key', 'incmp' %>
   <button type="submit">Submit</button>
 </form>
