--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,12 @@
 <div class="row my-2">
-  <div class="col-8">
+  <div class="col-4">
     <h1>Event data</h1>
   </div>
   <div class="col-4">
     <h1>average rp: <strong id="average-rp">0</strong></h1>
+  </div>
+  <div class="col-4">
+    <h1 id="rank">Rank: <%= @rank %></h1>
   </div>
 </div>
 <button onclick="update()">Update data</button>
@@ -30,7 +33,8 @@
     let arp = 0
     let len = 0
     axios.get(`${window.location.origin}/update`).then((response) => {
-      response["data"].forEach(match => {
+      console.log(response)
+      response["data"][0].forEach(match => {
         match["teams"].forEach(team => {
           if (team['team_num'] == 461){
             arp += team['rp']
