--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,12 @@
 <div class="row my-2">
-  <div class="col-4">
+  <div class="col-7">
     <h1>Event data</h1>
   </div>
-  <div class="col-4">
+  <div class="col-3">
     <h1>average rp: <strong id="average-rp">0</strong></h1>
   </div>
-  <div class="col-4">
-    <h1 id="rank">Rank: <%= @rank %></h1>
+  <div class="col-2">
+    <h1>Rank: <strong id="rank"><%= @rank %></strong></h1>
   </div>
 </div>
 <button onclick="update()">Update data</button>
@@ -33,8 +33,8 @@
     let arp = 0
     let len = 0
     axios.get(`${window.location.origin}/update`).then((response) => {
-      console.log(response)
-      response["data"][0].forEach(match => {
+      console.log(JSON.parse(response['data'][0]))
+      JSON.parse(response["data"][0]).forEach(match => {
         match["teams"].forEach(team => {
           if (team['team_num'] == 461){
             arp += team['rp']
@@ -47,6 +47,7 @@
         })
       })
       document.getElementById("average-rp").innerHTML = (Math.round((arp/len) * 100) / 100).toFixed(2)
+      document.getElementById("rank").innerHTML = response['data'][1]
     })
   }
 </script>
