--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,7 @@
   <script src="../Bug/bug-min.js"></script>
   <script src="../lib/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/lib/bootstrap-5.3.2-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <script type="text/javascript">
