--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,19 +5,11 @@
   <script src="../lib/axios.min.js"></script>
   <!-- <script src="../lib/axios.min.js.map"></script> -->
   <script src="../lib/datatables.min.js"></script>
-  <script src="../Bug/bug-min.js"></script>
   <script src="../lib/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/lib/bootstrap-5.3.2-dist/css/bootstrap.min.css">
 </head>
 <body>
-  <script type="text/javascript">
-    new BugController({
-      minBugs: 1,
-      maxBugs: 3,
-      numFrames: 0,
-      mouseOver: 'random'
-    })
-  </script>
+  <script type="text/javascript"></script>
   <div class="container">
     <%= yield %>
   </div>
